@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.6 2004/07/07 09:31:08 xtraeme Exp $
+$NetBSD: distinfo,v 1.7 2004/10/25 09:37:44 xtraeme Exp $
 
-SHA1 (bitlbee-0.90a.tar.gz) = 8e9e75905544ffd2238b266a1a49074308cb5d66
-Size (bitlbee-0.90a.tar.gz) = 433338 bytes
+SHA1 (bitlbee-0.91.tar.gz) = f2f202ff86380e193044625ee3a258943d3b3aed
+Size (bitlbee-0.91.tar.gz) = 462675 bytes
